--- a/frontend_flask/templates/login.html
+++ b/frontend_flask/templates/login.html
@@ -30,7 +30,7 @@
   <body>
     <div class="card login-card shadow-lg p-4">
       <div class="text-center mb-4">
-        <h4>Klinik MDP Jaya</h4>
+        <h4>Klinik HealthVault</h4>
         <p class="text-muted">Silakan login untuk akses sistem</p>
       </div>
 
