--- a/frontend_flask/templates/dokter.html
+++ b/frontend_flask/templates/dokter.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %} {% block content %}
-<h4>Data Dokter</h4>
-<a href="/dokter/tambah" class="btn btn-success mb-3">+ Tambah Data</a>
-<table class="table table-bordered">
-  <thead class="table-primary">
+<div class="container-fluid mt-4">
+  <div class="d-flex justify-content-between align-items-center mb-3">
+    <h4><i class="bi bi-person-badge"></i> Data Dokter</h4>
+    <a href="/dokter/tambah" class="btn btn-success">+ Tambah Data</a>
+  </div>
+
+<div class="card shadow-sm">
+    <div class="card-body">
+<table class="table table-hover table-bordered">
+        <thead class="table-primary text-center">
     <tr>
       <th>No</th>
       <th>Nama</th>
@@ -24,9 +30,13 @@
       <td>{{ d.alamat }}</td>
       <td>
         <a href="/dokter/edit/{{ d.id }}" class="btn btn-warning btn-sm">✏️</a>
-        <a href="/dokter/hapus/{{ d.id }}" class="btn btn-danger btn-sm">🗑️</a>
+        <a href="/dokter/hapus/{{ d.id }}" class="btn btn-danger btn-sm" onclick="return confirm('Hapus data ini?')">🗑️</a>
       </td>
     </tr>
+     {% else %}
+          <tr>
+            <td colspan="8" class="text-center">Belum ada data dokter.</td>
+          </tr>
     {% endfor %}
   </tbody>
 </table>
