--- a/frontend_flask/templates/kunjungan.html
+++ b/frontend_flask/templates/kunjungan.html
@@ -37,7 +37,7 @@
                 >✏️</a
               >
               <a
-                href="/kunjungan/hapus/{{ k.id }}"
+                href="/kunjungan/hapus/{{ k.id }}"addwawad
                 class="btn btn-danger btn-sm"
                 onclick="return confirm('Hapus riwayat ini?')"
                 >🗑️</a
